remove API keys

--- a/draft/API.ipynb
+++ b/draft/API.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "from google import genai\n",
     "\n",
-    "client = genai.Client(api_key=\"AIzaSyCmnpfvYS5P7G0G8nraNh8HIU21BvLmIS8\")\n",
+    "client = genai.Client(api_key=\"*\")\n",
     "contents = r\"Kể tên các quốc gia ở Châu Á và thủ đô của chúng.\"\n",
     "response = client.models.generate_content(\n",
     "    model=\"gemini-2.5-flash-preview-05-20\", contents=contents\n",
