--- a/draft/pine.ipynb
+++ b/draft/pine.ipynb
@@ -13,12 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "76f9a9c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc = Pinecone(api_key=\"pcsk_3bBVw_6mPjMqzSfMLic7tQLgtTyVfEZr5UhVzPqNR5SNcXvqSUQP9z7vZyDBvUMyAmEJB\")"
+    "pc = Pinecone(api_key=\"*\")"
    ]
   },
   {
