--- a/draft/pinecone.ipynb
+++ b/draft/pinecone.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "f108259c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pinecone import Pinecone, ServerlessSpec\n",
     "\n",
-    "pc = Pinecone(api_key=\"pcsk_4tFemQ_495bjhvthHD2AYNxQPFeLTaLMay35CPhBj2Yx36rVvMVgMjVjSiZLFH5MYc2Pns\")"
+    "pc = Pinecone(api_key=\"*\")"
    ]
   },
   {
