--- a/draft/test_format.ipynb
+++ b/draft/test_format.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "bdc8f6b9",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "4c7c3c00",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "3e06adf9",
    "metadata": {},
    "outputs": [
@@ -134,10 +134,20 @@
      "text": [
       "Số trang trong PDF: 219\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\Duongw\\AppData\\Local\\Temp\\ipykernel_20016\\4066776290.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pdf_path = \"..\\data\\LichSuDang\\gt-lich-su-dang-csvn-ban-tuyen-giao-tw.pdf\"\n"
+     ]
     }
    ],
    "source": [
-    "pdf_path = \"../data/LichSuDang/lich_su_dang.pdf\"\n",
+    "pdf_path = \"..\\data\\LichSuDang\\gt-lich-su-dang-csvn-ban-tuyen-giao-tw.pdf\"\n",
     "\n",
     "#Tạo fulltext để chứa toàn bộ các dòng chử trong file Lịch sử Đảng\n",
     "sections = []\n",
@@ -150,12 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "2a99aecf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\Duongw\\AppData\\Local\\Temp\\ipykernel_20016\\3898450939.py:1: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pdf_path = \"..\\data\\LichSuDang\\gt-lich-su-dang-csvn-ban-tuyen-giao-tw.pdf\"\n"
+     ]
+    }
+   ],
    "source": [
-    "pdf_path = \"../data/LichSuDang/lich_su_dang.pdf\"\n",
+    "pdf_path = \"..\\data\\LichSuDang\\gt-lich-su-dang-csvn-ban-tuyen-giao-tw.pdf\"\n",
     "\n",
     "def chunking_LSD(pdf_path):\n",
     "    chapter_title = []\n",
@@ -544,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "ee919a81",
    "metadata": {},
    "outputs": [
@@ -552,7 +573,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           None\n",
@@ -561,7 +581,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          Đảng Cộng sản Việt N ... o quan điểm củaĐảng. ------------ 2168\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           I.\n",
@@ -570,7 +589,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          Đối tượng nghiên cứu ... các thời kỳ lịch sử. ------------ 126\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           1.\n",
@@ -579,7 +597,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:           Trước hết là các sự ... ng thực, khách quan. ------------ 1489\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           2.\n",
@@ -588,7 +605,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:           Đảng lãnh đạo cách  ... ối đưa đến thắnglợi. ------------ 1433\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           3.\n",
@@ -597,7 +613,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:           Đảng lãnh đạo thông ... a quốc tế trongsáng. ------------ 1635\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           4\n",
@@ -622,7 +637,6 @@
       "Tiêu đề mục con:        1. Chức năng của khoa học Lịch sử Đảng\n",
       "Nội dung đoạn:          Trước hết đó là chức ... n hóa” trong nội bộ. ------------ 3579\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương nhập môn\n",
       "Tiêu đề chương:         ĐỐI TƯỢNG, CHỨC NĂNG, NHIỆM VỤ,NỘI DUNG VÀ PHƯƠNG PHÁP NGHIÊN CỨU, HỌC TẬPLỊCH SỬ ĐẢNG CỘNG SẢN VIỆT NAM\n",
       "Mục hiện tại:           II.\n",
@@ -647,7 +661,6 @@
       "Tiêu đề mục con:        2. Các phương pháp cụ thể\n",
       "Nội dung đoạn:          Khoa học lịch sử và  ... a xã hội ở Việt Nam. ------------ 15401\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 1\n",
       "Tiêu đề chương:         ĐẢNG CỘNG SẢN VIỆT NAM RA ĐỜI VÀ LÃNH ĐẠO ĐẤU TRANH GIÀNH CHÍNH QUYỀN (1930 - 1945)\n",
       "Mục hiện tại:           None\n",
@@ -656,7 +669,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          Về kiến thức:  ... Về kiến thức:  ------------ 14\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 1\n",
       "Tiêu đề chương:         ĐẢNG CỘNG SẢN VIỆT NAM RA ĐỜI VÀ LÃNH ĐẠO ĐẤU TRANH GIÀNH CHÍNH QUYỀN (1930 - 1945)\n",
       "Mục hiện tại:           MỤC\n",
@@ -689,7 +701,6 @@
       "Tiêu đề mục con:        3. Thành lập Đảng Cộng sản Việt Nam và Cương lĩnh chính trị đầu tiên củaĐảng\n",
       "Nội dung đoạn:          Các tổ chức cộng sản ... ng một trang sử mới. ------------ 13111\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 1\n",
       "Tiêu đề chương:         ĐẢNG CỘNG SẢN VIỆT NAM RA ĐỜI VÀ LÃNH ĐẠO ĐẤU TRANH GIÀNH CHÍNH QUYỀN (1930 - 1945)\n",
       "Mục hiện tại:           I.\n",
@@ -722,7 +733,6 @@
       "Tiêu đề mục con:        3. Phong trào giải phóng dân tộc 1939-1945\n",
       "Nội dung đoạn:          Bối cảnh lịch sử và  ...  giành chính quyền.  ------------ 34914\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 1\n",
       "Tiêu đề chương:         ĐẢNG CỘNG SẢN VIỆT NAM RA ĐỜI VÀ LÃNH ĐẠO ĐẤU TRANH GIÀNH CHÍNH QUYỀN (1930 - 1945)\n",
       "Mục hiện tại:           II.\n",
@@ -739,7 +749,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          1. Phân tích những đ ... g ThángTám năm 1945. ------------ 377\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 2\n",
       "Tiêu đề chương:         ĐẢNG LÃNH ĐẠO HAI CUỘC KHÁNG CHIẾN, HOÀN THÀNH GIẢI PHÓNG DÂN TỘC, THỐNG NHẤT ĐẤT NƯỚC (1945 - 1975)\n",
       "Mục hiện tại:           None\n",
@@ -748,7 +757,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          Về kiến thức: ... Về kiến thức: ------------ 13\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 2\n",
       "Tiêu đề chương:         ĐẢNG LÃNH ĐẠO HAI CUỘC KHÁNG CHIẾN, HOÀN THÀNH GIẢI PHÓNG DÂN TỘC, THỐNG NHẤT ĐẤT NƯỚC (1945 - 1975)\n",
       "Mục hiện tại:           MỤC\n",
@@ -781,7 +789,6 @@
       "Tiêu đề mục con:        3. Đẩy mạnh cuộc kháng chiến đến thắng lợi 1951-1954\n",
       "Nội dung đoạn:          Đại hội đại biểu toà ... cĐông Dương sau này. ------------ 19766\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 2\n",
       "Tiêu đề chương:         ĐẢNG LÃNH ĐẠO HAI CUỘC KHÁNG CHIẾN, HOÀN THÀNH GIẢI PHÓNG DÂN TỘC, THỐNG NHẤT ĐẤT NƯỚC (1945 - 1975)\n",
       "Mục hiện tại:           I.\n",
@@ -806,7 +813,6 @@
       "Tiêu đề mục con:        2. Lãnh đạo cách mạng cả nước 1965-1975\n",
       "Nội dung đoạn:          Đường lối kháng chiế ...  vĩ đại của dân tộc. ------------ 38325\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 2\n",
       "Tiêu đề chương:         ĐẢNG LÃNH ĐẠO HAI CUỘC KHÁNG CHIẾN, HOÀN THÀNH GIẢI PHÓNG DÂN TỘC, THỐNG NHẤT ĐẤT NƯỚC (1945 - 1975)\n",
       "Mục hiện tại:           II.\n",
@@ -823,7 +829,6 @@
       "Tiêu đề mục con:        None\n",
       "Nội dung đoạn:          1. Đường lối và sự c ... ởmiền Bắc 1954-1975. ------------ 562\n",
       "======================================================================================================\n",
-      "Chap hien tai: Chương 3ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Chương hiện tại:        Chương 3\n",
       "Tiêu đề chương:         ĐẢNG LÃNH ĐẠO CẢ NƯỚC QUÁ ĐỘ LÊNCHỦ NGHĨA XÃ HỘI VÀ TIẾN HÀNH CÔNG CUỘC ĐỔI MỚI(1975 - 2018)\n",
       "Mục hiện tại:           MỤC\n",
@@ -849,8 +854,8 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 69\u001b[39m\n\u001b[32m     66\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[33m\"\u001b[39m\u001b[33mBold\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m font) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[33m\"\u001b[39m\u001b[33mItalic\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m font):\n\u001b[32m     67\u001b[39m     \u001b[38;5;66;03m#Nếu có nội dung chương trước đó thì đẩy 1 chunk\u001b[39;00m\n\u001b[32m     68\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_content == \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m69\u001b[39m         chapter_number, chapter_title, section, section_title, subsection, subsection_title = \u001b[43mbuild_chunk\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurr_chapter_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_section_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_sub_section_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     70\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChap hien tai:\u001b[39m\u001b[33m\"\u001b[39m, chapter)\n\u001b[32m     71\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChương hiện tại:       \u001b[39m\u001b[33m\"\u001b[39m, chapter_number)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 24\u001b[39m, in \u001b[36mbuild_chunk\u001b[39m\u001b[34m(chapter_line, section_line, sub_section_line, content_line, position_in_document, model)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# Xử lý tiểu mục (subsection)\u001b[39;00m\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sub_section_line != \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m     subsection = \u001b[43msub_section_line\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m  \u001b[38;5;66;03m# lấy \"1.\"\u001b[39;00m\n\u001b[32m     25\u001b[39m     subsection_title = sub_section_line.strip()\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 68\u001b[39m\n\u001b[32m     65\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[33m\"\u001b[39m\u001b[33mBold\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m font) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[33m\"\u001b[39m\u001b[33mItalic\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m font):\n\u001b[32m     66\u001b[39m     \u001b[38;5;66;03m#Nếu có nội dung chương trước đó thì đẩy 1 chunk\u001b[39;00m\n\u001b[32m     67\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m is_content == \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m68\u001b[39m         chapter_number, chapter_title, section, section_title, subsection, subsection_title = \u001b[43mbuild_chunk\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurr_chapter_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_section_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_sub_section_line\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcontent\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     69\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mChương hiện tại:       \u001b[39m\u001b[33m\"\u001b[39m, chapter_number)\n\u001b[32m     70\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mTiêu đề chương:        \u001b[39m\u001b[33m\"\u001b[39m, chapter_title)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 24\u001b[39m, in \u001b[36mbuild_chunk\u001b[39m\u001b[34m(chapter_line, section_line, sub_section_line, content_line, position_in_document, model)\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m# Xử lý tiểu mục (subsection)\u001b[39;00m\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sub_section_line != \u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m24\u001b[39m     subsection = \u001b[43msub_section_line\u001b[49m\u001b[43m.\u001b[49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m  \u001b[38;5;66;03m# lấy \"1.\"\u001b[39;00m\n\u001b[32m     25\u001b[39m     subsection_title = sub_section_line.strip()\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
       "\u001b[31mIndexError\u001b[39m: list index out of range"
      ]
     }
@@ -874,7 +879,6 @@
     "    #Duyệt qua từng phần tử trong trang\n",
     "    for element in page_layout:\n",
     "        if isinstance(element, LTTextContainer):\n",
-    "\n",
     "            # Duyet qua từng dòng chữ trong phần tử\n",
     "            for text_line in element:\n",
     "                if isinstance(text_line, LTTextLine):\n",
@@ -925,7 +929,6 @@
     "                                    #Nếu có nội dung chương trước đó thì đẩy 1 chunk\n",
     "                                    if is_content == True:\n",
     "                                        chapter_number, chapter_title, section, section_title, subsection, subsection_title = build_chunk(curr_chapter_line, curr_section_line, curr_sub_section_line, content)\n",
-    "                                        print(\"Chap hien tai:\", chapter)\n",
     "                                        print(\"Chương hiện tại:       \", chapter_number)\n",
     "                                        print(\"Tiêu đề chương:        \", chapter_title)\n",
     "                                        print(\"Mục hiện tại:          \", section)\n",
@@ -1011,7 +1014,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1025,7 +1028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
