--- a/data/upsert.ipynb
+++ b/data/upsert.ipynb
@@ -23,15 +23,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "2728ae57",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Khởi tạo các biến cần thiết\n",
-    "API_KEY = \"pcsk_6Gv7LH_HK8eSqMfipJ6xn6GX33ghLrPJDPvLHkFbgnpyy5tnLWkeMLjt7n7ZPnbbyjisAX\"\n",
-    "HOST_DENSE = \"https://rag-subjects-dense-y0c06t1.svc.aped-4627-b74a.pinecone.io\"\n",
-    "HOST_SPARSE = \"https://rag-subjects-sparse-y0c06t1.svc.aped-4627-b74a.pinecone.io\""
+    "API_KEY = \"\"\n",
+    "HOST_DENSE = \"\"\n",
+    "HOST_SPARSE = \"\""
    ]
   },
   {
