Hybrid Search + env for API

--- a/data/upsert.ipynb
+++ b/data/upsert.ipynb
@@ -10,28 +10,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "9102afcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Workspace\\DACNTT\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "c:\\Workspace\\DACNTT\\venv\\Lib\\site-packages\\google\\protobuf\\runtime_version.py:98: UserWarning: Protobuf gencode version 5.29.0 is exactly one major version older than the runtime version 6.31.1 at db_data_2025-01.proto. Please update the gencode to avoid compatibility violations in the next runtime release.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Tải các thư viện cần thiết\n",
     "import json\n",
-    "\n",
-    "from pinecone.grpc import PineconeGRPC as Pinecone"
+    "from pinecone.grpc import PineconeGRPC as Pinecone\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2728ae57",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Khởi tạo các biến cần thiết\n",
-    "API_KEY = \"\"\n",
-    "HOST_DENSE = \"\"\n",
-    "HOST_SPARSE = \"\""
+    "load_dotenv(\"../.env\")\n",
+    "\n",
+    "PINECONE_API_KEY = os.getenv(\"PINECONE_API_KEY\")\n",
+    "HOST_DENSE = os.getenv(\"HOST_DENSE\")\n",
+    "HOST_SPARSE = os.getenv(\"HOST_SPARSE\")"
    ]
   },
   {
@@ -67,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "749219ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc = Pinecone(api_key=API_KEY)\n",
+    "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
     "\n",
     "# Lấy ra Index của Dense Database\n",
     "dense_index = pc.Index(host=HOST_DENSE)\n",
