Hybrid Search + env + utils

--- a/data/LichSuDang/lich_su_dang_chunking.ipynb
+++ b/data/LichSuDang/lich_su_dang_chunking.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "id": "c45eed26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tạo đường dẫn chung để đọc utils\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ef57e62",
    "metadata": {},
    "outputs": [],
@@ -23,7 +36,12 @@
     "from sentence_transformers import SentenceTransformer\n",
     "from rank_bm25 import BM25Okapi\n",
     "import torch\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "# Utils\n",
+    "from utils.load_chunks_json import load_chunks_from_json\n",
+    "from utils.save_chunks_json import save_chunks_to_json\n",
+    "from utils.bm25 import bm25_tokenize, text_to_sparse_vector_bm25"
    ]
   },
   {
@@ -159,28 +177,6 @@
     "        result.append(chunk)\n",
     "\n",
     "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "1138081b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bm25_tokenize(text):\n",
-    "    return text.lower().split()\n",
-    "\n",
-    "def text_to_sparse_vector_bm25(text, bm25, vocabulary):\n",
-    "    tokens = bm25_tokenize(text)\n",
-    "    vector = np.zeros(len(vocabulary))\n",
-    "    for i, word in enumerate(vocabulary):\n",
-    "        idf = bm25.idf.get(word, 0)\n",
-    "        tf = tokens.count(word)\n",
-    "        vector[i] = idf * tf\n",
-    "    indices = vector.nonzero()[0].tolist()\n",
-    "    values = vector[indices].tolist()\n",
-    "    return {\"indices\": indices, \"values\": values}"
    ]
   },
   {
@@ -405,40 +401,6 @@
     "        final_chunks.extend(split_chunks)\n",
     "\n",
     "    return final_chunks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de22e90e",
-   "metadata": {},
-   "source": [
-    "# ***Lưu json ra ngoài***"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "077a2712",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Hàm để trích xuất chunks sang 1 file json\n",
-    "def save_chunks_to_json(chunks, output_path):\n",
-    "    \"\"\"\n",
-    "    Lưu danh sách các chunk (list of dict) ra file JSON.\n",
-    "    \"\"\"\n",
-    "    os.makedirs(os.path.dirname(output_path), exist_ok=True)  # Tạo folder nếu chưa có\n",
-    "\n",
-    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(chunks, f, ensure_ascii=False, indent=2)\n",
-    "\n",
-    "    print(f\"✅ Đã lưu {len(chunks)} chunks vào: {output_path}\")\n",
-    "\n",
-    "# Đọc data từ file json\n",
-    "def load_chunks_from_json(file_path):\n",
-    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "        chunks = json.load(f)\n",
-    "    return chunks"
    ]
   },
   {
