--- a/data/upsert.ipynb
+++ b/data/upsert.ipynb
@@ -10,6 +10,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "e4c6417c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tạo đường dẫn chung để đọc utils\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "9102afcd",
    "metadata": {},
@@ -30,7 +43,8 @@
     "import json\n",
     "from pinecone.grpc import PineconeGRPC as Pinecone\n",
     "from dotenv import load_dotenv\n",
-    "import os"
+    "import os\n",
+    "from utils.load_chunks_json import load_chunks_from_json"
    ]
   },
   {
@@ -50,22 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "47159b04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Đọc các file JSON\n",
-    "#Tạo hàm đọc\n",
-    "def load_chunks_from_json(file_path):\n",
-    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "        chunks = json.load(f)\n",
-    "    return chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "4dccd5b1",
    "metadata": {},
    "outputs": [],
