--- a/data/TrietHoc/triet_hoc_chunking.ipynb
+++ b/data/TrietHoc/triet_hoc_chunking.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "id": "7cbde860",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tạo đường dẫn chung để đọc utils\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "15743167",
    "metadata": {},
    "outputs": [],
@@ -10,6 +23,9 @@
     "from pdfminer.high_level import extract_pages\n",
     "from pdfminer.layout import LTTextContainer, LTTextLine, LTChar\n",
     "from pypdf import PdfReader\n",
+    "from utils.load_chunks_json import load_chunks_from_json\n",
+    "from utils.save_chunks_json import save_chunks_to_json\n",
+    "from utils.bm25 import bm25_tokenize, text_to_sparse_vector_bm25\n",
     "\n",
     "from sentence_transformers import SentenceTransformer\n",
     "from rank_bm25 import BM25Okapi\n",
@@ -201,28 +217,6 @@
     "        result.append(chunk)\n",
     "\n",
     "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "bb799225",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def bm25_tokenize(text):\n",
-    "    return text.lower().split()\n",
-    "\n",
-    "def text_to_sparse_vector_bm25(text, bm25, vocabulary):\n",
-    "    tokens = bm25_tokenize(text)\n",
-    "    vector = np.zeros(len(vocabulary))\n",
-    "    for i, word in enumerate(vocabulary):\n",
-    "        idf = bm25.idf.get(word, 0)\n",
-    "        tf = tokens.count(word)\n",
-    "        vector[i] = idf * tf\n",
-    "    indices = vector.nonzero()[0].tolist()\n",
-    "    values = vector[indices].tolist()\n",
-    "    return {\"indices\": indices, \"values\": values}"
    ]
   },
   {
@@ -598,42 +592,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "3d9aa6c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import os\n",
-    "\n",
-    "def save_chunks_to_json(chunks, output_path):\n",
-    "    \"\"\"\n",
-    "    Lưu danh sách các chunk (list of dict) ra file JSON.\n",
-    "    \"\"\"\n",
-    "    os.makedirs(os.path.dirname(output_path), exist_ok=True)  # Tạo folder nếu chưa có\n",
-    "\n",
-    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(chunks, f, ensure_ascii=False, indent=2)\n",
-    "\n",
-    "    print(f\"✅ Đã lưu {len(chunks)} chunks vào: {output_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "d6092a2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Đọc data từ file json\n",
-    "def load_chunks_from_json(file_path):\n",
-    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
-    "        chunks = json.load(f)\n",
-    "    return chunks"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "753ba5fb",
    "metadata": {},
@@ -643,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "537b33f7",
    "metadata": {},
    "outputs": [
