Thêm giao diện streamlit và format lại code

--- a/data/LichSuDang/lich_su_dang_chunking.ipynb
+++ b/data/LichSuDang/lich_su_dang_chunking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c45eed26",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2ef57e62",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "edf333f9",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bdc8f6b9",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "250c7a78",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4c7c3c00",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "4243f08f",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a3af3c01",
    "metadata": {},
    "outputs": [],
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a6f7d719",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "ff407543",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "aceac8b2",
    "metadata": {},
    "outputs": [
@@ -490,23 +490,6 @@
      "output_type": "stream",
      "text": [
       "Số trang trong PDF: 219\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Duongw\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:263.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Đã lưu 50 chunks vào: ./Lich_Su_Dang_raw.json\n",
-      "✅ Đã lưu 347 chunks vào: ./Lich_Su_Dang_Dense_Global.json\n",
-      "✅ Đã lưu 347 chunks vào: ./Lich_Su_Dang_Sparse_Global.json\n"
      ]
     }
    ],
@@ -524,19 +507,19 @@
     "#Tạo Densve Vector từ RAW chunks\n",
     "embedding_model = SentenceTransformer(\"AITeamVN/Vietnamese_Embedding\")\n",
     "embedding_model.max_seq_length = 2048\n",
-    "LSD_dense_chunks = chunk_with_embedding(LSD_raw_chunk, embedding_model)\n",
+    "# LSD_dense_chunks = chunk_with_embedding(LSD_raw_chunk, embedding_model)\n",
     "\n",
-    "#Tạo Sparse Vector từ RAW chunks\n",
-    "corpus_texts = [chunk[\"content\"] for chunk in LSD_raw_chunk]\n",
-    "tokenized_corpus = [bm25_tokenize(text) for text in corpus_texts]\n",
-    "bm25 = BM25Okapi(tokenized_corpus)\n",
-    "vocabulary = list(bm25.idf.keys())\n",
-    "LSD_sparse_chunks = chunk_with_sparse(LSD_raw_chunk, bm25, vocabulary)\n",
+    "# #Tạo Sparse Vector từ RAW chunks\n",
+    "# corpus_texts = [chunk[\"content\"] for chunk in LSD_raw_chunk]\n",
+    "# tokenized_corpus = [bm25_tokenize(text) for text in corpus_texts]\n",
+    "# bm25 = BM25Okapi(tokenized_corpus)\n",
+    "# vocabulary = list(bm25.idf.keys())\n",
+    "# LSD_sparse_chunks = chunk_with_sparse(LSD_raw_chunk, bm25, vocabulary)\n",
     "\n",
-    "# Lưu các Vector vừa tạo ra file Json\n",
-    "save_chunks_to_json(LSD_raw_chunk, r\"./Lich_Su_Dang_raw.json\")\n",
-    "save_chunks_to_json(LSD_dense_chunks, r\"./Lich_Su_Dang_Dense_Global.json\")\n",
-    "save_chunks_to_json(LSD_sparse_chunks, r\"./Lich_Su_Dang_Sparse_Global.json\")\n",
+    "# # Lưu các Vector vừa tạo ra file Json\n",
+    "# save_chunks_to_json(LSD_raw_chunk, r\"./Lich_Su_Dang_raw.json\")\n",
+    "# save_chunks_to_json(LSD_dense_chunks, r\"./Lich_Su_Dang_Dense_Global.json\")\n",
+    "# save_chunks_to_json(LSD_sparse_chunks, r\"./Lich_Su_Dang_Sparse_Global.json\")\n",
     "\n",
     "#Đọc các file json ra thành chunks, chuẩn bị upsert lên Database\n",
     "# LSD_raw_chunk = load_chunks_from_json(r\"./Lich_Su_Dang_raw.json\")\n",
@@ -546,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b56b1a24",
    "metadata": {},
    "outputs": [],
@@ -556,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "1e2169a5",
    "metadata": {},
    "outputs": [
@@ -566,7 +549,7 @@
        "347"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,88 +559,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c6c2e64",
+   "metadata": {},
+   "source": [
+    "# ***Parent chunking Lịch Sử Đảng***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748c67a8",
+   "metadata": {},
+   "source": [
+    "## Kiểm tra duplicate id trong Lịch Sử Đảng"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3659f295",
+   "execution_count": 15,
+   "id": "49cdef56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LSD_raw_vector = load_chunks_from_json(r\"./Lich_Su_Dang_Raw.json\")\n",
+    "LSD_dense_vector = load_chunks_from_json(r\"./Lich_Su_Dang_Dense_Global.json\")\n",
+    "LSD_sparse_vector = load_chunks_from_json(r\"./Lich_Su_Dang_Sparse_Global.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "de96cff1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PHÂN TÍCH ID DUPLICATES:\n",
-      "Tổng số chunks: 347\n",
-      "Số ID unique: 347\n",
-      "Số chunks bị duplicate ID: 0\n",
-      "Không có ID duplicate!\n"
+      "Tổng số chunks trong LSD_dense_chunks: 347\n",
+      "Tổng số id unique trong LSD_dense_chunks: 347\n"
      ]
     }
    ],
    "source": [
-    "from collections import Counter\n",
+    "test_list = [chunk[\"id\"] for chunk in LSD_dense_chunks]\n",
+    "test_set = set(test_list)\n",
     "\n",
-    "# Đếm số lượng chunk bị duplicate id\n",
-    "chunk_ids = [chunk['id'] for chunk in LSD_dense_chunks]\n",
-    "unique_ids = set(chunk_ids)\n",
-    "\n",
-    "print(f\"PHÂN TÍCH ID DUPLICATES:\")\n",
-    "print(f\"Tổng số chunks: {len(LSD_dense_chunks)}\")\n",
-    "print(f\"Số ID unique: {len(unique_ids)}\")\n",
-    "print(f\"Số chunks bị duplicate ID: {len(LSD_dense_chunks) - len(unique_ids)}\")\n",
-    "\n",
-    "if len(LSD_dense_chunks) != len(unique_ids):\n",
-    "    print(f\"Tỷ lệ duplicate: {(len(LSD_dense_chunks) - len(unique_ids))/len(LSD_dense_chunks)*100:.2f}%\")\n",
-    "    \n",
-    "    # Tìm các ID bị duplicate\n",
-    "    id_counts = Counter(chunk_ids)\n",
-    "    duplicate_ids = {id_val: count for id_val, count in id_counts.items() if count > 1}\n",
-    "    \n",
-    "    print(f\"\\nCác ID bị duplicate:\")\n",
-    "    for id_val, count in sorted(duplicate_ids.items()):\n",
-    "        print(f\"  {id_val}: {count} lần\")\n",
-    "        \n",
-    "    print(f\"\\nTổng số ID bị duplicate: {len(duplicate_ids)}\")\n",
-    "else:\n",
-    "    print(\"Không có ID duplicate!\")"
+    "print(\"Tổng số chunks trong LSD_dense_chunks:\", len(test_list))\n",
+    "print(\"Tổng số id unique trong LSD_dense_chunks:\", len(test_set))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5c6c2e64",
+   "id": "28c7a16e",
    "metadata": {},
    "source": [
-    "## ***Parent document chunking***"
+    "## Thực hiện thống kê độ dài các chunk"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95bbc11a",
+   "id": "965a6920",
    "metadata": {},
    "source": [
-    "### Load dense chunk"
+    "### Thực hiện thống kê qua distribution và boxplot để quan sát phân bố độ dài của các chunk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a20508b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dense_chunk = load_chunks_from_json(r\"./Lich_Su_Dang_Dense_Global.json\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9742d3c6",
-   "metadata": {},
-   "source": [
-    "### Analyzing để chọn ra số lượng chunk hiệu quả"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "ec506f24",
    "metadata": {},
    "outputs": [
@@ -705,6 +675,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "dense_chunk = LSD_dense_chunks\n",
     "# Lấy độ dài content của mỗi chunk\n",
     "content_lengths = [len(chunk['metadata']['content']) for chunk in dense_chunk]\n",
     "\n",
@@ -748,20 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9fc4a443",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Khởi tạo embedding model\n",
-    "# embedding_model = SentenceTransformer(\"AITeamVN/Vietnamese_Embedding\")\n",
-    "# embedding_model.max_seq_length = 2048\n",
-    "# print(f\"Đã khởi tạo embedding model: {embedding_model.get_sentence_embedding_dimension()} dimensions\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "e61cc142",
    "metadata": {},
    "outputs": [],
@@ -831,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "9046cd69",
    "metadata": {},
    "outputs": [
@@ -929,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "ba96afb4",
    "metadata": {},
    "outputs": [
@@ -942,7 +900,21 @@
       "Tham số chunking:\n",
       "  - Child chunk size: 450 ký tự\n",
       "  - Overlap: 75 ký tự\n",
-      "  - Separators: [\\n\\n, \\n, ., !, ?, ' ', '']\n",
+      "  - Separators: [\\n\\n, \\n, ., !, ?, ' ', '']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Duongw\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\transformers\\models\\xlm_roberta\\modeling_xlm_roberta.py:371: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:263.)\n",
+      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "KẾT QUẢ CHUNKING:\n",
       "  - Parent chunks: 347\n",
@@ -1052,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "35617386",
    "metadata": {},
    "outputs": [
