Done Hybrid Search

--- a/data/upsert.ipynb
+++ b/data/upsert.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "e4c6417c",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "9102afcd",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "2728ae57",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "4dccd5b1",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "749219ae",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "5420343e",
    "metadata": {},
    "outputs": [
@@ -199,19 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "246db248",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "upserted_count: 347"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Upsert LSD completed successfully.\n"
+     ]
     }
    ],
    "source": [
@@ -244,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a6ec657d",
    "metadata": {},
    "outputs": [
@@ -256,22 +253,14 @@
       "==================================================\n",
       "\n",
       "TEST UPSERT 1 CHUNK - LSD:\n",
-      "✓ Test upsert thành công: upserted_count: 1\n",
-      "\n",
-      "\n",
-      "NAMESPACE HIỆN TẠI:\n",
-      "✓ Test upsert thành công: upserted_count: 1\n",
+      "SUCCESS: Test upsert thành công: upserted_count: 1\n",
       "\n",
       "\n",
       "NAMESPACE HIỆN TẠI:\n",
       "  lich-su-dang-children-test: 0 vectors\n",
       "  lich-su-dang: 347 vectors\n",
       "  triet-hoc: 400 vectors\n",
-      "  triet-hoc-children: 1819 vectors\n",
-      "  lich-su-dang-children-test: 0 vectors\n",
-      "  lich-su-dang: 347 vectors\n",
-      "  triet-hoc: 400 vectors\n",
-      "  triet-hoc-children: 1819 vectors\n"
+      "  lich-su-dang-children: 450 vectors\n"
      ]
     }
    ],
@@ -308,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3b957489",
    "metadata": {},
    "outputs": [
@@ -318,112 +307,59 @@
      "text": [
       "UPSERT CHILD CHUNKS VỚI BATCH SIZE NHỎ - LỊCH SỬ ĐẢNG\n",
       "==================================================\n",
-      "✓ Đã xóa test namespace\n",
-      "✓ Đã xóa test namespace\n",
-      "Warning: UNKNOWN:Error received from peer  {grpc_message:\"Namespace not found\", grpc_status:5, created_time:\"2025-07-15T07:38:23.9144617+00:00\"}\n",
+      "SUCCESS: Đã xóa test namespace\n",
+      "SUCCESS: Đã xóa namespace 'lich-su-dang-children'\n",
       "Bắt đầu upsert 1971 chunks...\n",
-      "Upsert batch 1/40 (50 chunks)... Warning: UNKNOWN:Error received from peer  {grpc_message:\"Namespace not found\", grpc_status:5, created_time:\"2025-07-15T07:38:23.9144617+00:00\"}\n",
-      "Bắt đầu upsert 1971 chunks...\n",
-      "Upsert batch 1/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 2/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 2/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 3/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 3/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 4/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 4/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 5/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 5/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 6/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 6/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 7/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 7/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 8/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 8/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 9/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 9/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 10/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 10/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 11/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 11/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 12/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 12/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 13/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 13/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 14/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 14/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 15/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 15/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 16/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 16/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 17/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 17/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 18/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 18/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 19/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 19/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 20/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 20/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 21/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 21/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 22/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 22/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 23/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 23/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 24/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 24/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 25/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 25/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 26/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 26/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 27/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 27/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 28/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 28/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 29/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 29/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 30/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 30/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 31/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 31/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 32/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 32/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 33/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 33/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 34/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 34/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 35/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 35/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 36/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 36/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 37/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 37/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 38/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 38/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 39/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 39/40 (50 chunks)... ✓ 50\n",
-      "Upsert batch 40/40 (21 chunks)... ✓ 50\n",
-      "Upsert batch 40/40 (21 chunks)... ✓ 21\n",
+      "Upsert batch 1/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 2/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 3/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 4/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 5/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 6/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 7/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 8/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 9/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 10/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 11/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 12/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 13/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 14/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 15/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 16/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 17/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 18/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 19/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 20/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 21/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 22/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 23/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 24/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 25/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 26/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 27/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 28/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 29/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 30/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 31/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 32/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 33/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 34/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 35/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 36/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 37/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 38/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 39/40 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 40/40 (21 chunks)... SUCCESS: 21\n",
       "\n",
       "KẾT QUẢ - LỊCH SỬ ĐẢNG:\n",
       "Total upserted: 1971/1971\n",
       "Success rate: 100.0%\n",
-      "✓ All batches successful!\n",
+      "SUCCESS: All batches successful!\n",
       "\n",
       "KIỂM TRA NAMESPACE:\n",
-      "✓ 21\n",
+      "  lich-su-dang-children: 1971 vectors\n",
       "\n",
-      "KẾT QUẢ - LỊCH SỬ ĐẢNG:\n",
-      "Total upserted: 1971/1971\n",
-      "Success rate: 100.0%\n",
-      "✓ All batches successful!\n",
-      "\n",
-      "KIỂM TRA NAMESPACE:\n",
-      "  lich-su-dang-children: 1950 vectors\n",
-      "\n",
-      "🎉 HOÀN THÀNH! Đã upsert thành công tất cả 1971 chunks!\n",
-      "  lich-su-dang-children: 1950 vectors\n",
-      "\n",
-      "🎉 HOÀN THÀNH! Đã upsert thành công tất cả 1971 chunks!\n"
+      "HOÀN THÀNH! Đã upsert thành công tất cả 1971 chunks!\n"
      ]
     }
    ],
@@ -531,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d27d41bd",
    "metadata": {},
    "outputs": [
@@ -543,13 +479,13 @@
       "==================================================\n",
       "\n",
       "TEST UPSERT 1 CHUNK:\n",
-      "✓ Test upsert thành công: upserted_count: 1\n",
+      "SUCCESS: Test upsert thành công: upserted_count: 1\n",
       "\n",
       "\n",
       "NAMESPACE HIỆN TẠI:\n",
       "  lich-su-dang: 347 vectors\n",
       "  triet-hoc: 400 vectors\n",
-      "  triet-hoc-children: 1819 vectors\n",
+      "  lich-su-dang-children: 1971 vectors\n",
       "  triet-hoc-children-test: 0 vectors\n"
      ]
     }
@@ -587,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "42f9d0e1",
    "metadata": {},
    "outputs": [
@@ -597,55 +533,56 @@
      "text": [
       "UPSERT CHILD CHUNKS VỚI BATCH SIZE NHỎ\n",
       "==================================================\n",
-      "✓ Đã xóa test namespace\n",
-      "✓ Đã xóa namespace 'lich-su-dang-children'\n",
+      "SUCCESS: Đã xóa test namespace\n",
+      "Warning: UNKNOWN:Error received from peer  {grpc_message:\"Namespace not found\", grpc_status:5}\n",
       "Bắt đầu upsert 1819 chunks...\n",
-      "Upsert batch 1/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 2/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 3/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 4/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 5/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 6/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 7/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 8/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 9/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 10/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 11/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 12/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 13/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 14/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 15/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 16/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 17/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 18/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 19/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 20/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 21/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 22/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 23/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 24/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 25/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 26/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 27/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 28/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 29/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 30/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 31/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 32/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 33/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 34/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 35/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 36/37 (50 chunks)... ✓ 50\n",
-      "Upsert batch 37/37 (19 chunks)... ✓ 19\n",
+      "Upsert batch 1/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 2/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 3/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 4/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 5/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 6/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 7/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 8/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 9/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 10/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 11/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 12/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 13/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 14/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 15/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 16/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 17/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 18/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 19/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 20/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 21/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 22/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 23/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 24/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 25/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 26/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 27/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 28/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 29/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 30/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 31/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 32/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 33/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 34/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 35/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 36/37 (50 chunks)... SUCCESS: 50\n",
+      "Upsert batch 37/37 (19 chunks)... SUCCESS: 19\n",
       "\n",
       "KẾT QUẢ:\n",
       "Total upserted: 1819/1819\n",
       "Success rate: 100.0%\n",
-      "✓ All batches successful!\n",
+      "SUCCESS: All batches successful!\n",
       "\n",
       "KIỂM TRA NAMESPACE:\n",
+      "  triet-hoc-children: 0 vectors\n",
       "\n",
-      "🎉 HOÀN THÀNH! Đã upsert thành công tất cả 1819 chunks!\n"
+      "HOÀN THÀNH! Đã upsert thành công tất cả 1819 chunks!\n"
      ]
     }
    ],
@@ -745,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "2128ab86",
    "metadata": {},
    "outputs": [
@@ -756,20 +693,12 @@
       "KIỂM TRA TỔNG HỢP TẤT CẢ NAMESPACE\n",
       "============================================================\n",
       "DENSE INDEX STATS:\n",
-      "  lich-su-dang: 347 vectors\n",
-      "  triet-hoc: 400 vectors\n",
-      "  triet-hoc-children: 1819 vectors\n",
       "  lich-su-dang-children: 1971 vectors\n",
-      "\n",
-      "Total dense vectors: 4537\n",
-      "\n",
-      "SPARSE INDEX STATS:\n",
-      "  lich-su-dang: 347 vectors\n",
       "  triet-hoc: 400 vectors\n",
-      "  triet-hoc-children: 1819 vectors\n",
-      "  lich-su-dang-children: 1971 vectors\n",
+      "  triet-hoc-children: 0 vectors\n",
+      "  lich-su-dang: 347 vectors\n",
       "\n",
-      "Total dense vectors: 4537\n",
+      "Total dense vectors: 2718\n",
       "\n",
       "SPARSE INDEX STATS:\n",
       "  lich-su-dang: 347 vectors\n",
@@ -783,7 +712,7 @@
       "TRIẾT HỌC:\n",
       "  - Dense (Hybrid): 400 vectors\n",
       "  - Sparse (Hybrid): 400 vectors\n",
-      "  - Children (Parent Retrieval): 1819 vectors\n",
+      "  - Children (Parent Retrieval): 0 vectors\n",
       "\n",
       "LỊCH SỬ ĐẢNG:\n",
       "  - Dense (Hybrid): 347 vectors\n",
@@ -796,40 +725,7 @@
       "TRIẾT HỌC:\n",
       "  - Dense: 400/400 (SUCCESS)\n",
       "  - Sparse: 400/400 (SUCCESS)\n",
-      "  - Children: 1819/1819 (SUCCESS)\n",
-      "\n",
-      "LỊCH SỬ ĐẢNG:\n",
-      "  - Dense: 347/347 (SUCCESS)\n",
-      "  - Sparse: 347/347 (SUCCESS)\n",
-      "  - Children: 1971/1971 (SUCCESS)\n",
-      "\n",
-      "UPSERT PROCESS COMPLETED!\n",
-      "Tất cả dữ liệu đã được upsert lên Pinecone!\n",
-      "  lich-su-dang: 347 vectors\n",
-      "  triet-hoc: 400 vectors\n",
-      "\n",
-      "Total sparse vectors: 747\n",
-      "\n",
-      "============================================================\n",
-      "SUMMARY THEO MÔN HỌC:\n",
-      "============================================================\n",
-      "TRIẾT HỌC:\n",
-      "  - Dense (Hybrid): 400 vectors\n",
-      "  - Sparse (Hybrid): 400 vectors\n",
-      "  - Children (Parent Retrieval): 1819 vectors\n",
-      "\n",
-      "LỊCH SỬ ĐẢNG:\n",
-      "  - Dense (Hybrid): 347 vectors\n",
-      "  - Sparse (Hybrid): 347 vectors\n",
-      "  - Children (Parent Retrieval): 1971 vectors\n",
-      "\n",
-      "============================================================\n",
-      "KIỂM TRA ĐỘ HOÀN CHỈNH:\n",
-      "============================================================\n",
-      "TRIẾT HỌC:\n",
-      "  - Dense: 400/400 (SUCCESS)\n",
-      "  - Sparse: 400/400 (SUCCESS)\n",
-      "  - Children: 1819/1819 (SUCCESS)\n",
+      "  - Children: 0/1819 (FAILED)\n",
       "\n",
       "LỊCH SỬ ĐẢNG:\n",
       "  - Dense: 347/347 (SUCCESS)\n",
@@ -931,7 +827,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -945,7 +841,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
